// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click a user 1`] = `
<DocumentFragment>
  <div
    style="display: flex; flex-grow: 1; max-height: 90vh;"
  >
    <div
      style="background: rgb(217, 217, 217); width: 20em;"
    >
      <div
        class="userChat"
        style="background: rgb(173, 232, 244);"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Manasi Agrawal
          </span>
          <p>
            dsafdsafa
          </p>
        </div>
      </div>
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Shubham Kulkarni
          </span>
          <p>
            dsafdsaf
          </p>
        </div>
      </div>
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Guy Nir
          </span>
          <p>
            bnvcncvb
          </p>
        </div>
      </div>
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Ajinkya Bokade
          </span>
          <p>
            sfd
          </p>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; background: rgb(245, 245, 245); font-size: 1.5em; flex-grow: 1; justify-content: center;"
    >
      <div
        style="background: white; display: flex; align-items: center; justify-content: center; padding: 1em; color: black;"
      >
        <img
          alt="profile-pic"
          class="contact-photo"
          src="user.png"
        />
        <span>
          Shubham Kulkarni
        </span>
      </div>
      <div
        style="display: flex; flex-direction: column; flex-grow: 2; overflow-y: scroll;"
      >
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Hi. This is Shubham.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Hi Shubham. This is Manasi.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Hi Manasi. How can I help you today?
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            I need a tour for 625 8th Avenue New York NY. Please get this done ASAP.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            On my way now.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Tour is complete. Please leave a review!
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Thanks for your work!
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Thanks Manasi!
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            great
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            wonderful
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            excellent
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            hi
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            sd
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            sdfds
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            s
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            sdfsd
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            dsafsda
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            asdfsa
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            sdafsdaf
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            dsafdsafa
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div />
      </div>
      <div
        style="display: flex; padding: 0.5em;"
      >
        <input
          placeholder="Type..."
          style="flex-grow: 1; border: 0.5px solid black; background: rgb(245, 245, 245); border-radius: 2em; padding: 0px 1em;"
          type="text"
          value=""
        />
        <img
          alt="send-button"
          src="send_icon.png"
          style="height: 2em; width: 2em; margin: 0em 1em;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`click user, subscribed 1`] = `
<DocumentFragment>
  <div
    style="display: flex; flex-grow: 1; max-height: 90vh;"
  >
    <div
      style="background: rgb(217, 217, 217); width: 20em;"
    >
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Shubham Kulkarni
          </span>
          <p>
            dsafdsaf
          </p>
        </div>
      </div>
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Guy Nir
          </span>
          <p>
            bnvcncvb
          </p>
        </div>
      </div>
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Ajinkya Bokade
          </span>
          <p>
            sfd
          </p>
        </div>
      </div>
      <div
        class="userChat"
        style="background: rgb(173, 232, 244);"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Manasi Agrawal
          </span>
          <p>
            dsafdsafa
          </p>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; background: rgb(245, 245, 245); font-size: 1.5em; flex-grow: 1; justify-content: center;"
    >
      <div
        style="background: white; display: flex; align-items: center; justify-content: center; padding: 1em; color: black;"
      >
        <img
          alt="profile-pic"
          class="contact-photo"
          src="user.png"
        />
        <span>
          Shubham Kulkarni
        </span>
      </div>
      <div
        style="display: flex; flex-direction: column; flex-grow: 2; overflow-y: scroll;"
      >
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Hi. This is Shubham.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Hi Shubham. This is Manasi.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Hi Manasi. How can I help you today?
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            I need a tour for 625 8th Avenue New York NY. Please get this done ASAP.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            On my way now.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Tour is complete. Please leave a review!
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Thanks for your work!
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Thanks Manasi!
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            great
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            wonderful
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            excellent
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            hi
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            sd
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            sdfds
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            s
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            sdfsd
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            dsafsda
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            asdfsa
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            sdafsdaf
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            dsafdsafa
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div
          style="list-style-type: none; max-width: 80%; margin: 0.5em 2em; border-radius: 1em; padding: 1em; box-shadow: 0 4px 4px #00000040; display: flex; flex-direction: column; background: white;"
        >
          <p
            style="margin: 0px;"
          >
            Hi. This is Shubham.
          </p>
          <span
            style="font-size: 0.5em; align-self: flex-end;"
          >
            dummy date
          </span>
        </div>
        <div />
      </div>
      <div
        style="display: flex; padding: 0.5em;"
      >
        <input
          placeholder="Type..."
          style="flex-grow: 1; border: 0.5px solid black; background: rgb(245, 245, 245); border-radius: 2em; padding: 0px 1em;"
          type="text"
          value=""
        />
        <img
          alt="send-button"
          src="send_icon.png"
          style="height: 2em; width: 2em; margin: 0em 1em;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`render after loading 1`] = `
<DocumentFragment>
  <div
    style="display: flex; flex-grow: 1; max-height: 90vh;"
  >
    <div
      style="background: rgb(217, 217, 217); width: 20em;"
    >
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Manasi Agrawal
          </span>
          <p>
            dsafdsafa
          </p>
        </div>
      </div>
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Shubham Kulkarni
          </span>
          <p>
            dsafdsaf
          </p>
        </div>
      </div>
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Guy Nir
          </span>
          <p>
            bnvcncvb
          </p>
        </div>
      </div>
      <div
        class="userChat"
      >
        <img
          alt=""
          src="user.png"
        />
        <div
          class="userChatInfo"
        >
          <span>
            Ajinkya Bokade
          </span>
          <p>
            sfd
          </p>
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: column; background: rgb(245, 245, 245); font-size: 1.5em; flex-grow: 1; justify-content: center;"
    >
      <h1
        style="align-self: center;"
      >
        Select a conversation
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`render with no user 1`] = `
<DocumentFragment>
  <div
    style="display: flex; flex-grow: 1; max-height: 90vh;"
  >
    <h1>
      Loading...
    </h1>
    <div
      style="display: flex; flex-direction: column; background: rgb(245, 245, 245); font-size: 1.5em; flex-grow: 1; justify-content: center;"
    >
      <h1
        style="align-self: center;"
      >
        Select a conversation
      </h1>
    </div>
  </div>
</DocumentFragment>
`;
